# POGG

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/TODO/: TODO.rst
docs/source/_templates/: api_templates.md  api_templates.rst
docs/source/apidocs/: index.rst
docs/source/apidocs/pogg/: pogg.__about__.md  pogg.data_handling.graph_util.md  pogg.data_handling.md  pogg.data_handling.pogg_dataset.md  pogg.evaluation.evaluation.md  pogg.evaluation.md  pogg.evaluation.reporting.md  pogg.graph_to_SEMENT.graph_to_SEMENT.md  pogg.graph_to_SEMENT.md  pogg.lexicon.lexicon_builder.md  pogg.lexicon.md  pogg.md  pogg.my_delphin.md  pogg.my_delphin.my_delphin.md  pogg.my_delphin.sementcodecs.md  pogg.pogg_config.md  pogg.pogg_routine.md  pogg.semantic_composition.base_constructions.md  pogg.semantic_composition.composition_mixins.base_constructions.md  pogg.semantic_composition.composition_mixins.boolean_constructions.md  pogg.semantic_composition.composition_mixins.heuristic_constructions.md  pogg.semantic_composition.composition_mixins.md  pogg.semantic_composition.composition_mixins.perplexity_constructions.md  pogg.semantic_composition.composition_mixins.single_word_constructions.md  pogg.semantic_composition.md  pogg.semantic_composition.semantic_algebra.md  pogg.semantic_composition.semantic_composition.md  pogg.semantic_composition.sement_util.md
docs/source/archive/: SemanticAlgebra_usage_with_output.md  pogg.pogg_config.rst  pogg.semantic_composition.semantic_algebra.rst  pogg.semantic_composition.sement_util.rst  sement_util_usage_with_output.md
docs/source/education/: erg.rst  mrs.rst  sement_education.ipynb
docs/source/old_rst/: pogg.semantic_composition.base_constructions.rst  semantic_algebra.ipynb
docs/source/pogg/: pogg.pogg_config.rst  pogg.pogg_config_usage.ipynb  test.md
docs/source/pogg/semantic_composition/: pogg.semantic_composition.semantic_algebra.rst  pogg.semantic_composition.sement_util.rst
docs/source/usage_nbs/pogg/: config.yml  dataset.yml  pogg_config_usage.ipynb  toy_dataset.yml
docs/source/usage_nbs/pogg/data_handling/: dataset_config.yml  (+5 more)
src/: sandbox.ipynb
src/data/: config.yml
src/examples/: base_constructions.ipynb  lexicon_sandbox.py  sandbox.ipynb  semantic_constructions_sandbox.ipynb  sement_util_usage.ipynb
src/pogg/: pogg_config.py  pogg_routine.py
src/pogg/data_handling/: __init__.py  _pogg_dataset.py  graph_util.py  pogg_dataset.py
src/pogg/evaluation/: __init__.py  _diff.py  _diff_reporting.py  _evaluation.py  _evaluation_reporting.py  evaluation.py  reporting.py
src/pogg/graph_to_SEMENT/: __init__.py  _graph_to_SEMENT.py  graph_to_SEMENT.py
src/pogg/lexicon/: __init__.py  _auto_lexicon.py  _lexicon.py  _lexicon_entry.py  auto_lexicon.py  lexicon_builder.py
src/pogg/my_delphin/: my_delphin.py  sement.py
src/pogg/semantic_composition/: base_constructions.py  call_tracer.py  semantic_algebra.py  semantic_composition.py  sement_util.py
src/pogg/semantic_composition/composition_mixins/: base_constructions.py  boolean_constructions.py  heuristic_constructions.py  single_word_constructions.py
src/sandboxes/: ace_sandbox.py  graph_util_sandbox.py  sem_comp_sandbox.py
tests/: conftest.py  pogg_config_test.py  pogg_test.sh
tests/data_handling/: fixtures.py  graph_util_test.py  test_graph_util.py  test_graph_util_cases.py  test_pogg_dataset.py  test_pogg_dataset_cases.py
tests/evaluation/: fixtures.py  test_evaluation.py  test_evaluation_cases.py
tests/graph_to_SEMENT/: fixtures.py  test_graph_to_SEMENT.py  test_graph_to_SEMENT_cases.py
tests/lexicon/: fixtures.py  test_lexicon_builder.py  test_lexicon_builder_cases.py
tests/my_delphin/: my_delphin_test.py  sement_test.py  test_my_delphin.py  test_sementcodecs.py
tests/pogg_config/: fixtures.py  test_pogg_config.py
tests/pogg_routine/: fixtures.py  test_pogg_routine.py  test_pogg_routine_cases.py
tests/semantic_composition/: fixtures.py  test_base_constructions.py  test_base_constructions_cases.py  test_semantic_algebra.py  test_semantic_algebra_cases.py  test_semantic_composition.py  test_semantic_composition_base_constructions_cases.py  test_semantic_composition_single_word_cases.py  test_sement_util.py  test_sement_util_cases.py
tests/semantic_composition_tests/: semantic_algebra_test.py  sement_util_test.py
tests/test_data/data_handling/: dataset_config.yml  dataset_config_missing_dataset_name.yml  double_root_failure.dot  double_root_topological_failure.dot  double_rooted_graph_with_cycle.dot  full_build_graph_coverage.dot  full_build_graph_coverage.json  full_build_graph_coverage_written_json.json  no_root_candidate.dot  rooted_graph_with_cycle.dot  small_red_car.dot  small_red_car_no_root.dot  small_red_car_no_root_extra_newline.dot
tests/test_data/evaluation/: edge_eval_file.json  edge_eval_file_no_sement.json  node_eval_file.json  node_eval_file_no_sement.json
tests/test_data/evaluation/eval_dir/: dataset_eval.json  eval_metadata.json
tests/test_data/evaluation/eval_dir_no_sements/: graph.dot  graph_eval_file.json
tests/test_data/graph_to_SEMENT/: baby_dataset.yml  baby_lexicon_all_entries.json  baby_lexicon_complete_entries.json
tests/test_data/graph_to_SEMENT/SEMENTs/: README.txt  cake_00.txt  cake_sg_01.txt  vanilla_02.txt  vanilla_cake_03.txt  vanilla_cake_collapsed_04.txt  vanilla_cake_sg_05.txt
tests/test_data/graph_to_SEMENT/dot/: chocolate_vanilla_cake.dot  cyclical_cake.dot  strawberry_vanilla_cake.dot  true_cake.dot
tests/test_data/pogg_routine/: dataset_config.yml
tests/test_data/pogg_routine/gold_evaluation/: single_graph_report.txt
tests/test_data/semantic_composition/base_constructions/: 3_sg_f_pronoun_sement.txt  cookie_sement.txt  cookie_sement_w_var_props.txt  eat_sement.txt  eat_sement_w_var_props.txt  generic_pronoun_sement.txt  in_sement.txt  in_sement_w_var_props.txt  liz_sement.txt  liz_sement_w_var_props.txt  sugar_cookie_sement.txt  tasty_cookie_sement.txt  tasty_sement.txt  tasty_sement_w_var_props.txt  the_cookie_sement.txt  the_sement.txt  the_sement_w_var_props.txt
(+182 files in other folders)
