[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pogg"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Elizabeth C. Conrad", email = "lizcconrad@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/pogg#readme"
Issues = "https://github.com/U.N. Owen/pogg/issues"
Source = "https://github.com/U.N. Owen/pogg"

[tool.hatch.version]
path = "src/pogg/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pogg tests}"

[tool.coverage.run]
source_pkgs = ["pogg", "tests"]
branch = true
parallel = true
omit = [
  "src/pogg/__about__.py",
]

[tool.coverage.paths]
pogg = ["src/pogg", "*/pogg/src/pogg"]
tests = ["tests", "*/pogg/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
